--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "react": "^16.2.0",
     "react-addons-transition-group": "^15.6.2",
     "react-dom": "^16.2.0",
+    "react-mounter": "^1.2.0",
     "react-router": "^4.2.0",
-    "react-router-dom": "^4.2.2"
+    "react-router-dom": "^4.2.2",
+    "semantic-ui-react": "^0.79.0"
   }
 }
