--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "@babel/runtime": "^7.0.0-beta.36",
     "bcrypt": "^1.0.3",
+    "chai": "^4.1.2",
     "meteor-node-stubs": "^0.3.2",
     "react": "^16.3.0",
     "react-addons-transition-group": "^15.6.2",
